Integrating all the services into the app

--- a/app/src/main/res/layout/card_show_fragment.xml
+++ b/app/src/main/res/layout/card_show_fragment.xml
@@ -27,8 +27,9 @@
                 android:layout_height="0dp"
                 android:layout_weight=".1"
                 android:background="@null"
-                android:gravity="center"
+                android:gravity="center_horizontal"
                 android:padding="@dimen/padding_common_8"
+                android:text=""
                 android:textColor="@android:color/black"
                 android:textColorHint="@color/colorTextGray"
                 android:textSize="@dimen/text_size_common_16"
@@ -50,12 +51,12 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight=".1" />
+                android:layout_weight=".05" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight=".3"
+                android:layout_weight=".4"
                 android:gravity="center"
                 android:orientation="horizontal"
                 android:weightSum="1">
@@ -73,7 +74,18 @@
                         android:id="@+id/barCodeImg"
                         android:layout_width="wrap_content"
                         android:layout_height="0dp"
-                        android:layout_weight=".8" />
+                        android:layout_weight=".8"/>
+
+                    <com.ymca.CustomFont.SecondaryFontText
+                        android:id="@+id/barCodeNo"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_horizontal"
+                        android:padding="@dimen/padding_common_5"
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/text_size_common_13"
+                        app:fontNames="@string/custom_secondary_font"
+                        />
                 </LinearLayout>
             </LinearLayout>
 
@@ -85,7 +97,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight=".3"
+                android:layout_weight=".4"
                 android:gravity="center"
                 android:orientation="horizontal"
                 android:weightSum="1">
