--- a/app/src/main/res/layout/add_my_card_fragment.xml
+++ b/app/src/main/res/layout/add_my_card_fragment.xml
@@ -33,7 +33,8 @@
                 android:textColor="@android:color/black"
                 android:textColorHint="@color/colorTextGray"
                 android:textSize="@dimen/text_size_common_16"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:singleLine="true"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -97,14 +98,14 @@
                     android:layout_weight=".8"
                     android:src="@drawable/card"/>
 
-                <com.ymca.CustomFont.SecondaryFontText
+                <com.ymca.CustomFont.PrimaryFontText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:padding="@dimen/padding_common_5"
                     android:text="@string/add_card_text"
                     android:textSize="@dimen/text_size_common_16"
-                    app:fontNames="@string/custom_secondary_font" />
+                    app:fontNames="@string/custom_primary_font" />
             </LinearLayout>
 
             <View
