--- a/app/src/main/res/layout/custom_event_calender_fragment.xml
+++ b/app/src/main/res/layout/custom_event_calender_fragment.xml
@@ -64,7 +64,10 @@
             <ListView
                 android:id="@+id/eventListView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:dividerHeight="2dp"
+                android:divider="@android:color/white"
+                android:layout_marginTop="@dimen/margin_common_10"/>
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
