--- a/app/src/main/res/layout/instructor_detail_fragment.xml
+++ b/app/src/main/res/layout/instructor_detail_fragment.xml
@@ -10,18 +10,29 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
+        <RelativeLayout
             android:id="@+id/circleInstructorLay"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center">
 
-            <com.ymca.CustomFont.RoundedImage
+            <ImageView
+                android:id="@+id/bgImg"
+                android:layout_width="128dp"
+                android:layout_height="128dp"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/img_box" />
+
+            <ImageView
                 android:id="@+id/circleInstructorImg"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
-                android:src="@drawable/blog_icon" />
-        </LinearLayout>
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:scaleType="fitCenter"
+                android:src="@mipmap/user_default" />
+        </RelativeLayout>
 
         <com.ymca.CustomFont.PrimaryFontText
             android:id="@+id/instructorName"
@@ -87,8 +98,8 @@
                     android:textColor="@android:color/black"
                     android:textSize="@dimen/margin_common_16"
                     android:textStyle="bold"
-                    app:fontNames="@string/custom_primary_font"
-                    android:visibility="gone"/>
+                    android:visibility="gone"
+                    app:fontNames="@string/custom_primary_font" />
 
                 <LinearLayout
                     android:id="@+id/certificateLayout"
@@ -97,8 +108,7 @@
                     android:layout_below="@+id/certificationTag"
                     android:orientation="vertical"
                     android:paddingLeft="@dimen/padding_common_5"
-                    android:visibility="gone"/>
-
+                    android:visibility="gone" />
 
 
                 <com.ymca.CustomFont.PrimaryFontText
@@ -124,15 +134,19 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/certificationTag"
                     android:orientation="vertical"
-                    android:paddingLeft="@dimen/padding_common_5"/>
+                    android:paddingLeft="@dimen/padding_common_5" />
 
                 <ListView
+                    android:id="@+id/instructorList"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:id="@+id/instructorList"/>
+                    android:focusable="false"
+                    android:clickable="true"
+                    android:fastScrollEnabled="true"/>
 
             </LinearLayout>
         </ScrollView>
+
         <View
             android:layout_width="match_parent"
             android:layout_height="10dp"
